pfish       2005/10/06 01:44:50 UTC	(20051006-2655)
  Log:
  fix module header (this is not memoserv/read)
  

  Changes:	Modified:
  +1 -1		trunk/modules/memoserv/forward.c (File Modified) 


pfish       2005/10/06 01:41:35 UTC	(20051006-2653)
  Log:
  don't allow a user to forward to another user with nomemo enabled
  

  Changes:	Modified:
  +10 -0	trunk/modules/memoserv/forward.c (File Modified) 


pfish       2005/10/06 01:27:38 UTC	(20051006-2651)
  Log:
  Don't allow memos to be sent to users with the NOMEMO flag set.
  

  Changes:	Modified:
  +10 -0	trunk/modules/memoserv/send.c (File Modified) 


pfish       2005/10/06 01:21:00 UTC	(20051006-2649)
  Log:
  Add NOMEMO flag to NickServ/SET --
  MemoServ will not allow users to send memos to users with nomemo enabled.
  

  Changes:	Modified:
  +1 -0		trunk/include/account.h (File Modified) 
  +54 -0	trunk/modules/nickserv/set.c (File Modified) 


kog         2005/10/06 01:20:29 UTC	(20051006-2647)
  Log:
  login check on functions, should be unix formatted, free memo struct on send/delete if returning, hardcoded memo limit changed to me.mdlimit
  

  Changes:	Modified:
  +16 -5	trunk/modules/memoserv/delete.c (File Modified) 
  +14 -3	trunk/modules/memoserv/forward.c (File Modified) 
  +8 -0		trunk/modules/memoserv/list.c (File Modified) 
  +8 -1		trunk/modules/memoserv/read.c (File Modified) 
  +14 -1	trunk/modules/memoserv/send.c (File Modified) 


pfish       2005/10/06 00:37:55 UTC	(20051006-2645)
  Log:
  we need to start a comment here
  

  Changes:	Modified:
  +1 -1		trunk/dist/example.conf (File Modified) 


kog         2005/10/06 00:37:18 UTC	(20051006-2643)
  Log:
  added modloads for memoserv, memoserv conf block
  

  Changes:	Modified:
  +47 -0	trunk/dist/example.userserv.conf (File Modified) 


kog         2005/10/06 00:36:32 UTC	(20051006-2641)
  Log:
  removed jEdit artifact from head of file
  

  Changes:	Modified:
  +0 -1		trunk/dist/example.conf (File Modified) 

