@@ -67,16 +67,6 @@ static void ms_cmd_forward(char *origin)
 	else
 		memonum = atoi(arg);
 	
-	/* check if user has nomemo set */
-	if (mu->flags & MU_NOMEMO)
-	{
-		notice(memosvs.nick, origin,
-			"\2%s\2 does not wish to receive memos.", target);
-
-		free(newmemo);
-		return;
-	}
-
 	/* user logged in? */
 	if (mu == NULL)
 	{
@@ -92,7 +82,16 @@ static void ms_cmd_forward(char *origin)
 		free(newmemo);
 		return;
 	}
-	
+	/* check if user has nomemo set */
+	if (mu->flags & MU_NOMEMO)
+	{
+		notice(memosvs.nick, origin,
+			"\2%s\2 does not wish to receive memos.", target);
+
+		free(newmemo);
+		return;
+	}
+
 	/* Check to see if target user exists */
 	if (!(them = myuser_find(target)))
 	{
